<resources>
    <string name="app_name">Legalease Client</string>
    <string name="facebook_app_id">625259754991703</string>

    <string name="name">Name</string>
    <string name="email">Your Email</string>
    <string name="mobile">Your Mobile</string>
    <string name="password">Your Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="condition">I Accept The Terms And Condition</string>
    <string name="complete_registration">Register</string>
    <string name="remember_me">Remember Me</string>
    <string name="forget_password">Forget Password</string>
    <string name="login">Login</string>
    <string name="your_phone_number">Phnone Number</string>
    <string name="your_otp">Your OTP</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="confirm">Confirm</string>
    <string name="submit">Submit</string>
    <string name="please_wait">Please Wait</string>
    <string name="address">Address</string>
    <string name="address2">Address 2</string>
    <string name="pincode">Pin code</string>
    <string name="qualification">Qualification</string>
    <string name="no_account">Don\'t Have An Account ? </string>
    <string name="register">Register</string>
    <string name="update_profile">Update Profile</string>
    <string name="city">City</string>
    <string name="gst">Enter Gst Number</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="toast_image_intent_null">toast_image_intent_null</string>


    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="menu_setting">Setting</string>
    <string name="logout">Logout</string>
    <string name="change_photo">Change Photo</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="state">State</string>
    <string name="menu_video">Video</string>
    <string name="menu_profile">Profile</string>
    <string name="client">My Client</string>
    <string name="service">My Services</string>
    <string name="change_password">Change Password</string>
    <string name="password_current">Current Password</string>
    <string name="password_new">New Password</string>
    <string name="password_confirm">Confirm Password</string>
    <string name="change_my_password">Change My Password</string>
    <string name="quiz">Quiz</string>
    <string name="earn_point">Share and Earn upto 300 points on their 1st Login</string>
    <string name="send">Send</string>
    <string name="refer">Refer &amp; Earn</string>
    <string name="menu_myAccount">My Accounts</string>
    <string name="menu_MyOrder">My Orders</string>
    <string name="menu_mybilling">Billing &amp; Payments</string>
    <string name="menu_wallet">Wallet</string>
    <string name="internal_storage">Internal storage</string>
    <string name="title_activity_report">ReportActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_summary">Summary</string>
    <string name="title_sheet">Balance Sheet</string>
    <string name="title_p"><![CDATA[P & L]]></string>
    <string name="title_report">Report</string>
    <string name="refercode">Enter referal code, if have any</string>
    <string name="trade">Trade Name</string>
    <string name="industry">Industry</string>
    <string name="dob">Enter your date of birth</string>
    <string name="chooser_title">Choose File</string>
    <string name="refer_code">REFER CODE</string>
    <string name="phone_number">PHONE NUMBER</string>
    <string name="easy_cash">Easy Cash</string>
    <string name="my_network">My Network</string>
    <string name="easy_money">Easy Money</string>
    <string name="associate">Associate Meetings</string>
    <string name="update">Updates</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
