<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="15dp">


    <androidx.cardview.widget.CardView
        android:id="@+id/card"
        android:layout_alignParentRight="true"
        android:layout_marginRight="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <ImageView
            android:background="@color/card_background"
            android:id="@+id/img_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:src="@drawable/close"/>
    </androidx.cardview.widget.CardView>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_below="@+id/card"
        android:id="@+id/input_password"
        android:layout_width="match_parent"
        android:background="@drawable/edittext_background"
        android:layout_margin="6dp"
        android:padding="8dp"
        android:layout_height="wrap_content">

        <EditText
            android:padding="5dp"
            android:id="@+id/et_password"
            android:singleLine="true"
            android:textColor="@color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:hint="@string/password_current"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_below="@+id/input_password"
        android:id="@+id/input_newPassword"
        android:layout_width="match_parent"
        android:background="@drawable/edittext_background"
        android:layout_margin="6dp"
        android:padding="8dp"
        android:layout_height="wrap_content">

        <EditText
            android:padding="5dp"
            android:id="@+id/et_newPassword"
            android:singleLine="true"
            android:textColor="@color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:hint="@string/password_new"/>
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_below="@+id/input_newPassword"
        android:id="@+id/input_confirmPassword"
        android:layout_width="match_parent"
        android:background="@drawable/edittext_background"
        android:layout_margin="6dp"
        android:padding="8dp"
        android:layout_height="wrap_content">

        <EditText
            android:padding="5dp"
            android:id="@+id/et_confirmPpassword"
            android:singleLine="true"
            android:textColor="@color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:hint="@string/password_confirm"/>
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.cardview.widget.CardView
        android:layout_below="@+id/input_confirmPassword"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/chane_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/change_my_password"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:background="@color/colorPrimaryDark"
            />
    </androidx.cardview.widget.CardView>


</RelativeLayout>