<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".UpdateActivity">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorPrimary"
        android:minHeight="?attr/actionBarSize">

        <RelativeLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/back"
                android:src="@drawable/back_white"
                android:layout_alignParentLeft="true"
                android:padding="10dp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />

            <ImageView
                android:id="@+id/iv_check"
                android:src="@drawable/check"
                android:layout_alignParentRight="true"
                android:layout_marginRight="10dp"
                android:padding="10dp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                />
        </RelativeLayout>
    </androidx.appcompat.widget.Toolbar>



    <RelativeLayout
        android:layout_below="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:id="@+id/relative1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/profile_image"
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                app:civ_border_color="@color/colorOrange"
                app:civ_border_width="2dp" />



            <com.github.aakira.expandablelayout.ExpandableRelativeLayout
                android:id="@+id/expandableLayout1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/profile_image"
                app:ael_duration="400"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                app:ael_expanded="false"
                app:ael_orientation="vertical">

                <LinearLayout

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="40dp"
                    android:weightSum="1"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:id="@+id/linear_addImageFromGallery"
                        android:layout_margin="5dp"
                        android:layout_width="0dp"
                        android:layout_height="80dp"
                        android:layout_weight="0.5"
                        android:weightSum="1"
                        android:orientation="vertical">

                        <de.hdodenhof.circleimageview.CircleImageView
                            android:layout_weight="0.7"
                            android:src="@drawable/gallery_icon"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"

                            />

                        <TextView
                            android:text="@string/gallery"
                            android:textColor="@color/black"
                            android:gravity="center"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:textSize="15sp"
                            android:layout_weight="0.3"/>

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/linear_addImageFromCamera"
                        android:layout_margin="5dp"
                        android:layout_width="0dp"
                        android:layout_height="80dp"
                        android:layout_weight="0.5"
                        android:weightSum="1"
                        android:orientation="vertical">

                        <de.hdodenhof.circleimageview.CircleImageView
                            android:layout_weight="0.7"
                            android:src="@drawable/camera_icon"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"

                            />

                        <TextView
                            android:text="@string/camera"
                            android:textColor="@color/black"
                            android:gravity="center"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:textSize="15sp"
                            android:layout_weight="0.3"/>

                    </LinearLayout>



                </LinearLayout>
            </com.github.aakira.expandablelayout.ExpandableRelativeLayout>


            <TextView
                android:id="@+id/tv_changePhoto"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_below="@+id/expandableLayout1"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:onClick="expandableButton1"
                android:text="@string/change_photo"
                android:textColor="@color/dark_blue"
                android:textSize="20sp"
                android:textStyle="bold" />

        </RelativeLayout>
        <ScrollView
            android:layout_below="@+id/relative1"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_margin="10dp"
                    android:layout_below="@+id/tv_changePhoto"
                    android:layout_marginTop="20dp">




                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/input_name"
                        android:layout_marginTop="20dp"
                        android:layout_marginLeft="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/et_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:singleLine="true"
                            android:textColorHint="@color/black_sixty"
                            android:hint="@string/name" />
                    </com.google.android.material.textfield.TextInputLayout>





                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/input_address"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="20dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/et_dob"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColorHint="@color/black_sixty"
                            android:clickable="false"
                            android:cursorVisible="false"
                            android:focusable="false"
                            android:focusableInTouchMode="false"
                            android:hint="@string/dob" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/input_mobile"
                        android:layout_marginTop="20dp"
                        android:layout_marginLeft="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:singleLine="true"
                            android:inputType="number"
                            android:maxLength="10"
                            android:textColorHint="@color/black_sixty"
                            android:hint="@string/mobile"
                            android:id="@+id/et_mobile"/>
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/input_pincode"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="20dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/et_pincode"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:singleLine="true"
                            android:inputType="number"
                            android:textColorHint="@color/black_sixty"
                            android:hint="@string/pincode" />
                    </com.google.android.material.textfield.TextInputLayout>


                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/input_city"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="20dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/et_city"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:singleLine="true"
                            android:textColorHint="@color/black_sixty"
                            android:hint="@string/city" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/input_state"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="20dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <Spinner
                            android:id="@+id/et_state"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:singleLine="true"
                            android:textColorHint="@color/black_sixty"
                            android:hint="@string/state" />
                    </com.google.android.material.textfield.TextInputLayout>



                    <TextView
                        android:id="@+id/tv_country"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="20dp"
                        android:text="India"
                        android:singleLine="true"
                        android:textColor="@color/black"
                        android:textSize="19sp"
                        android:padding="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/input_gst"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="20dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/et_gst"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:singleLine="true"
                            android:textColorHint="@color/black_sixty"
                            android:hint="@string/gst" />
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>


            </LinearLayout>
        </ScrollView>


    </RelativeLayout>







</RelativeLayout>