<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/iv"
        android:layout_alignParentTop="true"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:background="@drawable/registraion_backimage"/>





    <LinearLayout
        android:layout_below="@+id/iv"
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        >
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_name"
            android:layout_width="match_parent"
            android:padding="10dp"
            android:hint="@string/name"
            app:hintAnimationEnabled="true"
            android:layout_height="wrap_content">

            <EditText
                android:singleLine="true"
                android:padding="5dp"
                android:id="@+id/et_name"
                android:textColor="@color/black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                />
        </com.google.android.material.textfield.TextInputLayout>
        <View
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/floating_black" />
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_email"
            android:layout_width="match_parent"
            android:padding="10dp"
            android:hint="@string/phone_number"
            app:hintAnimationEnabled="true"
            android:layout_height="wrap_content">

            <EditText
                android:singleLine="true"
                android:padding="5dp"
                android:id="@+id/et_email"
                android:inputType="number"
                android:textColor="@color/black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                />
        </com.google.android.material.textfield.TextInputLayout>


        <View
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/floating_black" />
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_password"
            android:layout_width="match_parent"
            android:padding="10dp"
            android:layout_height="wrap_content">

            <EditText
                android:padding="5dp"
                android:singleLine="true"
                android:id="@+id/et_referalCode"
                android:textColor="@color/black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/refer_code"/>
        </com.google.android.material.textfield.TextInputLayout>
        <View
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/floating_black" />

        <TextView
            android:visibility="gone"
            android:id="@+id/tv_forgetPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Forget Password"
            android:textSize="19sp"
            android:textColor="@color/black_hard"
            android:padding="10dp"
            android:layout_marginTop="20dp"
            android:layout_gravity="right"
            android:layout_marginRight="20dp"
            />

    </LinearLayout>









    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:visibility="gone"
        android:gravity="center"
        android:layout_marginBottom="20dp"
        android:layout_above="@+id/login"
        android:orientation="horizontal" >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="17sp"
            android:textColor="@color/black_hard"
            android:text="NOT Registered?  " />
        <TextView
            android:id="@+id/register"
            android:textSize="17sp"
            android:textColor="@color/registraion_button_back"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Create Account "/>

    </LinearLayout>

    <Button
        android:layout_alignParentBottom="true"
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:textSize="21sp"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textStyle="bold" />
</RelativeLayout>
